--- a/Project1/src/app/app.component.html
+++ b/Project1/src/app/app.component.html
@@ -27,7 +27,7 @@
     </tr>
 </table>
 <br/>
-<button (click)="transferSelectedData()">Transfer to Destination Table</button>
+<button (click)="transferSelectedData()" style="visibility: hidden">Transfer to Destination Table</button>
 <br/>
 <br/>
 <table id="DestinationTable" class="SourceTable" style="border: solid;border-color: gray">
